--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -7,6 +7,7 @@
 
 <body>
     {{>header}}
+    <p>This site was created by {{name}}. It uses data from weatherstack.com and mapbox.com</p>
     {{>footer}}
 </body>
 
